Resume Header & Summary

--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 <html>
 	
 	<body>
+		
+		<p>Navigation</p>
+		<ul>
+		
+			<li>Resume</li>
+		
+		</ul>
+		
+		<h1>
+			Alexander P. Smith 
+		</h1>
+		<h3>
+			<a href="http://www.linkedin.com/in/smith4alexander">http://www.linkedin.com/in/smith4alexander</a> smith4alexander@gmail.com
+		</h3>
+		
+		<h2>
+			Summary:
+		</h2>
+		
 		<p>
-			Test
+			Information Technology Management Major with a
+			wide variety of skills in various operating systems and high-level languages. Seeking Internships and part time jobs
 		</p>
+		
+
+		
+		
+		
+		
+		
 	</body>
 	
 </html>
