Education and Navigation Menu
Worked on the Navigation menu and finished the Education Section

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 	
 	<body>
 		
-		<p>Navigation</p>
+		<p>Navigation Menu:</p>
+		
 		<ul>
 		
-			<li>Resume</li>
+			<li><a href="index.html">Resume</a></li>
+			<li>Page #2</li>
+			<li>Page #3</li>
 		
 		</ul>
 		
@@ -14,8 +17,12 @@
 			Alexander P. Smith 
 		</h1>
 		<h3>
-			<a href="http://www.linkedin.com/in/smith4alexander">http://www.linkedin.com/in/smith4alexander</a> smith4alexander@gmail.com
+			<a href="http://www.linkedin.com/in/smith4alexander">http://www.linkedin.com/in/smith4alexander</a>
 		</h3>
+		
+		<h4>
+			 smith4alexander@gmail.com
+		</h4>
 		
 		<h2>
 			Summary:
@@ -26,9 +33,27 @@
 			wide variety of skills in various operating systems and high-level languages. Seeking Internships and part time jobs
 		</p>
 		
-
+		<h2>
+			Education:
+		</h2>
 		
+		<h4>
+			llinois Institute of Technology
+		</h4>
 		
+		<p>Major in Information Technology Management</p>
+		
+		<ul>
+			<li>Specialization in Software Development</li>
+		</ul>
+		
+		<h4>
+			Alpha Sigma Phi - Alpha Xi Chapter
+		</h4>
+		
+		<ul>
+			<li>3<sup>rd</sup> Highest Ranking Officer</li>
+		</ul>
 		
 		
 		
