--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 		</h2>
 		
 		<p>
-			Information Technology Management Major with a
-			wide variety of skills in various operating systems and high-level languages. Seeking Internships and part time jobs
+			Information Technology Management Major with a wide variety of skills in various operating systems and high-level languages. Seeking Internships and part time jobs
 		</p>
 		
 		<h2>
@@ -44,7 +43,9 @@
 		<p>Major in Information Technology Management</p>
 		
 		<ul>
+		
 			<li>Specialization in Software Development</li>
+			
 		</ul>
 		
 		<h4>
@@ -52,8 +53,48 @@
 		</h4>
 		
 		<ul>
+		
 			<li>3<sup>rd</sup> Highest Ranking Officer</li>
+			
 		</ul>
+		
+		<h2>
+			Employment:
+		</h2>
+		
+		<p>AutoMeter Products Summer Intern</p>
+		
+		<ul>
+			
+			<li>Equus US Inventory and Shipment Management</li>
+			<li>Electronic Testing and Repair</li>
+			
+		</ul>
+		
+		<h2>
+			Skills:
+		</h2>
+		
+		<h3>
+			Operating Systems:
+		</h3>
+		
+		<p>
+			<u>Windows NT:</u> Windows 2000, XP, Vista, 7, 8, 8.1, 10
+		</p>
+		
+		<p>
+			<u>Windows 9x:</u> Windows 98, Me
+		</p>
+		
+		<p>
+			<u>Linux:</u> CentOS, Kali Linux, Ubuntu, Ubuntu Server, Tails, Linux Mint
+		</p>
+		
+		<p>
+			<u>Other:</u> Dos 6 MacOS
+		</p>
+		
 		
 		
 		
