Completed Skills section
Finished the last segments of the Skills section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		
 		</ul>
 		
+		
 		<h1>
 			Alexander P. Smith 
 		</h1>
@@ -20,9 +21,11 @@
 			<a href="http://www.linkedin.com/in/smith4alexander">http://www.linkedin.com/in/smith4alexander</a>
 		</h3>
 		
+		
 		<h4>
 			 smith4alexander@gmail.com
 		</h4>
+		
 		
 		<h2>
 			Summary:
@@ -31,6 +34,7 @@
 		<p>
 			Information Technology Management Major with a wide variety of skills in various operating systems and high-level languages. Seeking Internships and part time jobs
 		</p>
+		
 		
 		<h2>
 			Education:
@@ -58,9 +62,11 @@
 			
 		</ul>
 		
+		
 		<h2>
 			Employment:
 		</h2>
+		
 		
 		<p>AutoMeter Products Summer Intern</p>
 		
@@ -71,9 +77,11 @@
 			
 		</ul>
 		
+		
 		<h2>
 			Skills:
 		</h2>
+		
 		
 		<h3>
 			Operating Systems:
@@ -96,7 +104,39 @@
 		</p>
 		
 		
+		<h3>
+			Languages:
+		</h3>
 		
+		<p>
+			<u>Experienced with:</u> Java, C#, Python, MatLab, GDscript,
+		</p>
+		
+		<p>
+			<u>Familiar With:</u> HTML, CSS, C++, JavaScript
+		</p>
+		
+		
+		<h3>
+			Software:
+		</h3>
+		
+		<p>
+			<u>Experienced with:</u> Putty, Wireshark, VMware, OBS, Godot, GIMP
+		</p>
+		
+		<p>
+			<u>Familiar With:</u> Unity, Blender
+		</p>
+		
+		<h3>
+			Other:
+		</h3>
+		
+		<p>
+			National Eagle Scout, Six Sigma White Belt, National Technical Honor Society, Illinois State Scholar
+		</p>
+ 
 		
 	</body>
 	
