--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@
 		</h3>
 		
 		<p>
-			<u>Windows NT:</u> Windows 2000, XP, Vista, 7, 8, 8.1, 10
+			Windows NT: Windows 2000, XP, Vista, 7, 8, 8.1, 10
 		</p>
 		
 		<p>
-			<u>Windows 9x:</u> Windows 98, Me
+			Windows 9x: Windows 98, Me
 		</p>
 		
 		<p>
-			<u>Linux:</u> CentOS, Kali Linux, Ubuntu, Ubuntu Server, Tails, Linux Mint
+			Linux: CentOS, Kali Linux, Ubuntu, Ubuntu Server, Tails, Linux Mint
 		</p>
 		
 		<p>
-			<u>Other:</u> Dos 6 MacOS
+			Other: Dos 6 MacOS
 		</p>
 		
 		
@@ -109,11 +109,11 @@
 		</h3>
 		
 		<p>
-			<u>Experienced with:</u> Java, C#, Python, MatLab, GDscript,
+			Experienced with: Java, C#, Python, MatLab, GDscript,
 		</p>
 		
 		<p>
-			<u>Familiar With:</u> HTML, CSS, C++, JavaScript
+			Familiar With: HTML, CSS, C++, JavaScript
 		</p>
 		
 		
@@ -122,11 +122,11 @@
 		</h3>
 		
 		<p>
-			<u>Experienced with:</u> Putty, Wireshark, VMware, OBS, Godot, GIMP
+			Experienced with: Putty, Wireshark, VMware, OBS, Godot, GIMP
 		</p>
 		
 		<p>
-			<u>Familiar With:</u> Unity, Blender
+			Familiar With: Unity, Blender
 		</p>
 		
 		<h3>
@@ -136,7 +136,9 @@
 		<p>
 			National Eagle Scout, Six Sigma White Belt, National Technical Honor Society, Illinois State Scholar
 		</p>
- 
+		
+		
+		
 		
 	</body>
 	
