Finished Resume Page Content
Finished content for the resume page by adding the final projects page

--- a/index.html
+++ b/index.html
@@ -137,8 +137,21 @@
 			National Eagle Scout, Six Sigma White Belt, National Technical Honor Society, Illinois State Scholar
 		</p>
 		
+		<h2>
+			Projects:
+		</h2>
 		
+		<p>
+			Fully Featured Game with Custom Engine: Built a game from the ground up with a fully featured rendering engine and saving system.
+		</p>
 		
+		<p>
+			Multi-page Website with CSS: Built a stylized and modern website from the ground up with various styling elements and features.
+		</p>
+		
+		<p>
+			Custom Video Game Modification built on C# code: Built a custom modification for the popular game terraria with custom assets personally designed and integrated using C#
+		</p>
 		
 	</body>
 	
