Navigation and 1st Image added to MandlebrotPage
The first body of text was added as well as the navigation menu and the first image was added to the MandlebrotPage

--- a/MandlebrotPage.html
+++ b/MandlebrotPage.html
@@ -2,9 +2,27 @@
 <html>
 	<body>
 		
+		<p>Navigation Menu:</p>
 		
-		<p>Test</p>
+		<ul>
 		
+			<li><a href="index.html">Resume</a></li>
+			<li><a href="MandlebrotPage.html">Mandlebrot</a></li>
+			<li>Page #3</li>
+		
+		</ul>
+		
+		<h1>The Mandlebrot Set</h1>
+		
+		<img src="MandlebrotSet.png">
+		
+		<p>
+			The Mandlebrot Set is a mathematical equation that is plotted by how quickly goes to infinity.
+			The black space means that the starting coordinates do not reach infinty. 
+			The equation used to model this is:
+		</p>
+		
+		<h3>f<sub>c</sub>(z) = z<sup>2</sup> + c</h3>
 		
 	</body>
 </html>
