--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<ul>
 		
 			<li><a href="index.html">Resume</a></li>
-			<li><a href="MandlebrotPage.html">Mandlebrot and Julia sets</a></li>
+			<li><a href="MandlebrotPage.html">Mandlebrot</a></li>
 			<li>Page #3</li>
 		
 		</ul>
