--- a/MandlebrotPage.html
+++ b/MandlebrotPage.html
@@ -12,17 +12,44 @@
 		
 		</ul>
 		
-		<h1>The Mandlebrot Set</h1>
+		<h1>The Mandelbrot Set</h1>
 		
 		<img src="MandlebrotSet.png">
 		
 		<p>
-			The Mandlebrot Set is a mathematical equation that is plotted by how quickly goes to infinity.
-			The black space means that the starting coordinates do not reach infinty. 
+			The Mandelbrot Set is a mathematical equation that is plotted by how quickly goes to infinity.
+			The black space means that the starting coordinates do not reach infinity.
+			The Mandelbrot Set is one of mathematics' most well known fractal and produces many beautiful images.
 			The equation used to model this is:
 		</p>
 		
 		<h3>f<sub>c</sub>(z) = z<sup>2</sup> + c</h3>
+		
+		<p>
+			The Mandelbrot set is self repeating meaning that you will find smaller virsions of the main "bulb" scattered in its many branches.
+			Example below:
+		</p>
+		
+		<img src="MandlebrotSetRepeat.png">
+		
+		<p>
+			The further you zoom into the fractal, the more complex the image becomes.
+			Example below:
+		</p>
+		
+		<img src="MandlebrotSetZoom.png">
+		
+		<p>
+			The mandelbrot set can also be rendered in a similar way in 3d as it is rendered in 2d. 
+			Changing the variables a bit allows for some crazy looking images.
+			Example below:
+		</p>
+		
+		<img src="Mandlebrot3D.jpg">
+		
+		<p>
+			All images generated were done so on Alexander Smith's personal computer via a rendering software called visions of chaos
+		</p>
 		
 	</body>
 </html>
