--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		
 			<li><a href="index.html">Resume</a></li>
 			<li><a href="MandlebrotPage.html">Mandlebrot</a></li>
-			<li>Page #3</li>
+			<li><a href="Computer_Simulations.html">Computer Simulations</a></li>
 		
 		</ul>
 		
