Simulations Built and Title added
Added various simulation videos to the project folder and added a title to the page

--- a/Computer_Simulations.html
+++ b/Computer_Simulations.html
@@ -12,5 +12,10 @@
 			<li><a href="Computer_Simulations.html">Computer Simulations</a></li>
 		
 		</ul>
+		
+		<h1>Computer Simulations</h1>
+		
+		
+		
 	</body>
 </html>
