--- a/Computer_Simulations.html
+++ b/Computer_Simulations.html
@@ -15,6 +15,61 @@
 		
 		<h1>Computer Simulations</h1>
 		
+		<p>
+			Computer Simulations allow for complex ideas snd algorithms to be computed infinitley faster than if done by hand.
+		</p>
+		
+		<video loop controls>
+		
+			<source src="ViscoElasticFluidSim.MP4">
+			
+		</video>
+		
+		<h4>Pictured above: Viscoelastic Fluid simulation</h4>
+		
+		<p>
+			Computer Simulations help with both research and devlopment in almost all STEM fields and could be applied to almost all jobs.
+			A relevant example of this is desease spreading simulations, which are simulations that model the spread of deseases given an infectivity, population density, recovery rate, etc.
+		</p>
+		
+		<video controls>
+		
+			<source src="PandemicSim.MP4">
+		
+		</video>
+		
+		<h4>Pictured above: Pandemic Spread and Damage simulation</h4>
+		
+		<p>
+			A very prominant use of this would be in the field of Astrophysics.
+			To model complex interactions of planets and stars, you need extremely high detail physics simulations of gravity along with any other forces involved.
+		</p>
+		
+		
+		<video controls>
+		
+			<source src="GravitySim.mp4" >
+		
+		</video>
+		
+		<h4>Pictured above: Interaction of Gravitational Bodies simulation</h4>
+		
+		<p>
+			Another example could be simulating traffic flow and modeling grid lock, which could help cities avoid costly traffic issues.
+		</p>
+		
+		<video controls>
+		
+			<source src="TrafficSim.mov" >
+		
+		</video>
+		
+		<h4>Pictured above: Biham-Middleton-Levine Traffic simulation</h4>
+		
+		
+		<p>
+			All images generated were done so on Alexander Smith's personal computer via a rendering software called visions of chaos
+		</p>
 		
 		
 	</body>
