Fixed Validation Issues

--- a/MandlebrotPage.html
+++ b/MandlebrotPage.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+	
+	<meta charset="UTF-8">
+	<title>Mandelbrot</title>
+
 	<body>
 		
 		<p>Navigation Menu:</p>
@@ -14,7 +18,7 @@
 		
 		<h1>The Mandelbrot Set</h1>
 		
-		<img src="MandlebrotSet.png">
+		<img alt="Image of the Mandlebrot Set" src="MandlebrotSet.png">
 		
 		<p>
 			The Mandelbrot Set is a mathematical equation that is plotted by how quickly goes to infinity.
@@ -30,14 +34,14 @@
 			Example below:
 		</p>
 		
-		<img src="MandlebrotSetRepeat.png">
+		<img alt="Image of the Mandlebrot Set's ability to repeat itself" src="MandlebrotSetRepeat.png">
 		
 		<p>
 			The further you zoom into the fractal, the more complex the image becomes.
 			Example below:
 		</p>
 		
-		<img src="MandlebrotSetZoom.png">
+		<img alt="Image of the Mandlebrot Set" src="MandlebrotSetZoom.png">
 		
 		<p>
 			The mandelbrot set can also be rendered in a similar way in 3d as it is rendered in 2d. 
@@ -45,7 +49,7 @@
 			Example below:
 		</p>
 		
-		<img src="Mandlebrot3D.jpg">
+		<img alt="Image of a 3D render of the Mandlebrot Set" src="Mandlebrot3D.jpg">
 		
 		<p>
 			All images generated were done so on Alexander Smith's personal computer via a rendering software called visions of chaos
