--- a/Computer_Simulations.html
+++ b/Computer_Simulations.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	
+	<meta charset="UTF-8">
+	<title>Computer Simulations</title>
 	<body>
 		
 		<p>Navigation Menu:</p>
